Created a new Province model and completed Challenge 6

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -14,6 +14,16 @@
   </p>
 
   <p>
+    <%if customer.province.present?%>
+      <strong>Province:</strong>
+      <%= customer.province.name %>
+    <%else%>
+      <strong>Province:</strong>
+      <span>None</span>
+    <%end%>
+  </p>
+
+  <p>
     <strong>Email:</strong>
     <%= customer.email %>
   </p>
