--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :phonenumber %>
   </div>
   <div class="field">
+    <%= f.label :province_id %><br>
+    <%= f.collection_select :province_id, @province, :id, :name %>
+  </div>  
+  <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
